2005-01-22  David N. Welton  <davidw@dedasys.com>

	* configure.ac: Bumped version number.

2005-01-17  David N. Welton  <davidw@dedasys.com>

	* debian/rules: Added debian directory to aid in creation of
	TclMagick .deb package.

2005-01-12  David N. Welton  <davidw@dedasys.com>

	* Makefile.am (EXTRA_DIST): Added pkgIndex.tcl so that it gets
	distributed.
	(install-data-local): Change pkgIndex.tcl install location.

	* generic/Makefile.am (libdir): Make the version part of the
	install directory.

	* pkgIndex.tcl: Moved the Tk and TclMagick requires here for
	TkMagick.

	* generic/TclMagick.c (Tclmagick_Init): Use VERSION instead of
	hard coded version.

	* generic/TkMagick.c: Added stubs ifdef's.
	(Tkmagick_Init): Use VERSION instead of hard-coded version.

2005-01-11  David N. Welton  <davidw@dedasys.com>

	* ltmain.sh: I'm not terribly happy about including this, but not
	having it causes problems, and there is an exception to the GPL,
	so I guess it's ok.

	* generic/Makefile.am: Install libraries to package directory.

	* pkgIndex.tcl: Use the packages in the current directory.

	* genconf.sh: Slightly improved script to work with different
	versions of autotools.

2005-01-08  David N. Welton  <davidw@dedasys.com>

	* generic/TclMagick.c: Added patch from George Peter Staplin
	dealing with UTF/External encoding issues.  There may be more work
	to be done.

	* generic/TkMagick.c (PhotoToMagick): Swapped A and O letters to
	make alpha channel work here.  Argh!  Thanks to David Zolli for
	writing code to point this out.

	* configure.ac: Bumped version number.

2004-12-21  David N. Welton  <davidw@dedasys.com>

	* generic/TclMagick.c (wandObjCmd): Return errors on failure for
	image compare methods.

2004-12-20  David N. Welton  <davidw@dedasys.com>

	* generic/TclMagick.c (myMagickError): Use package name function
	to generate error messages.
	(wandObjCmd): Fixed bug that was causing AnnotateImage to not
	function properly.
