@@ -1,3 +1,8 @@
+2005-02-02  David N. Welton  <davidw@dedasys.com>
+
+	* generic/TkMagick.c: Woops, use Tcl_AppendResult instead of
+	Tcl_AddErrorInfo.
+
 2005-01-22  David N. Welton  <davidw@dedasys.com>
 
 	* configure.ac: Bumped version number.
